# BIT-CodeUGS

./: .gitignore  CPP调试指导.md  readme.md
clion123/: CMakeLists.txt
clion123/21.12.25CFinal/: t1.c  t2.c  t5s.c
cpp/2021springbreak/dynamic programming/: 最长公共子序列.cpp  最长递增子列.cpp
cpp/grade1/: 01背包.cpp  快速排序.cpp  成语bfs.cpp
cpp/grade2/algorithm/: DFA.cpp  aid  aid.cpp  tempCodeRunnerFile  tempCodeRunnerFile.cpp  保守教师网络流.cpp  奶酪存放问题.cpp  小游戏.cpp  最长递增子列dp.cpp  木板墙面积单调栈.cpp  活动调度问题.cpp  牛牛dp.cpp  牛牛差分约束+bellman-ford.cpp  矩阵连乘dp.cpp  钓鱼问题贪心  钓鱼问题贪心.cpp  钓鱼问题贪心copy.cpp  集合dfs加剪枝.cpp
grade1/: qsort analysis(open with web broswer).html  各种排序.cpp  多层图bfs.cpp  旋转数独dfs.cpp  树状数组合并dfs.cpp  求子列和.cpp
grade2/algorithm/: 24点排列树.cpp  TriTiling快速矩阵幂.cpp  二分搜索cablemaster.cpp  最近点对问题.cpp  线性时间选择油井问题.cpp  贪心yogurtfactory.cpp  钓鱼问题贪心.cpp
grade2/computer_graphics/: ep2.cpp  shader.h
grade2/data_structure/: AVL树.cpp  BiTree.cpp  CreateGlist.CPP  Dijstra邻接矩阵.cpp  heap_sort.cpp  中序后序生成树按层遍历.cpp  中缀转后缀.cpp  二叉排序树的查找与建立.cpp  二叉树的同构.cpp  判断合法出栈队列.cpp  前缀码判定.cpp  稀疏矩阵乘法运算.cpp  稀疏矩阵快速转置.cpp  表达式求值.cpp  计算哈夫曼树WPL.cpp
grade2/digital_logic/: exp3.v
grade2/discrete_math/: 染色法判断二部图.cpp  求命题公式的主范式.cpp  求极大元与极小元.cpp  通过可达矩阵判断图的连通类型.cpp
grade2/optimazation/: SA_memorized_reassigned.cpp  SimulatedAnnealing.cpp  flowshop-test-10-student.txt
grade3/OS/: start.asm
grade3/learnPython/: imageBuilder.py
java/singlefile/: test.java
playGround/: 123.cpp  CMakeLists.txt  Epowertower.cpp  H.cpp  Ksimplemath.cpp  eg.cpp  filetest.cpp  ios.cpp  test.cpp
python/optimazation/: sa.cpp
(+749 files in other folders)
