project(playGround)

add_executable(exp4 normal/exp4.cpp)
target_link_libraries(exp4 Psapi)
target_link_libraries(exp4 Shlwapi)
add_executable(test test.cpp)
add_executable(t3 t3.c)
add_executable(mid mid.c)
add_executable(select select.cpp)
add_executable(t2sum t2sum.cpp)
add_executable(t4string t4string.cpp)
add_executable(final final.cpp)
add_executable(randomization randomization.cpp)
add_executable(t1 t1.cpp)
target_link_libraries(t1 Psapi)
target_link_libraries(t1 Shlwapi)
add_executable(maxpro maxpro.cpp)
add_executable(permu permu.cpp)
add_executable(exp5win exp5win.CPP)